// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`containers/Profile/components/Jobs when prop.jobs is empty renders correctly 1`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#7e7e7e",
        "fontSize": 10,
      }
    }
  >
    Yet to be catalogued
  </Text>
</View>
`;

exports[`containers/Profile/components/Jobs when prop.jobs is not empty renders correctly 1`] = `
<View>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderColor": "#fff",
        "borderWidth": 1,
        "flex": 0.5,
        "flexDirection": "row",
        "marginBottom": 5,
        "padding": 22.5,
        "width": 600,
      }
    }
  >
    <Image
      source={1}
      style={
        Object {
          "height": 75,
          "resizeMode": "contain",
          "width": 75,
        }
      }
    />
    <View
      style={
        Object {
          "marginLeft": 22.5,
          "width": 360,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#569cee",
            "fontWeight": "bold",
          }
        }
      >
        developer
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        Awesome company
      </Text>
    </View>
    <View
      style={Object {}}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "textAlign": "right",
          }
        }
      >
        2016
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "textAlign": "right",
          }
        }
      >
        - 
        2017
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderColor": "#fff",
        "borderWidth": 1,
        "flex": 0.5,
        "flexDirection": "row",
        "marginBottom": 5,
        "padding": 22.5,
        "width": 600,
      }
    }
  >
    <Image
      source={1}
      style={
        Object {
          "height": 75,
          "resizeMode": "contain",
          "width": 75,
        }
      }
    />
    <View
      style={
        Object {
          "marginLeft": 22.5,
          "width": 360,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#569cee",
            "fontWeight": "bold",
          }
        }
      >
        developer
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        Applied Blockchain
      </Text>
    </View>
    <View
      style={Object {}}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "textAlign": "right",
          }
        }
      >
        2017
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "textAlign": "right",
          }
        }
      >
        - 
        2018
      </Text>
    </View>
  </View>
</View>
`;

exports[`containers/Profile/components/Jobs when prop.jobs is null renders correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
>
  Loading...
</Text>
`;
